# rendezvoususingC

ExternalLibraries/: Learning.cpp
ImportingExternalLibrariesGUid/: CMakeLists.txt  main.cpp  simple.cpp  test.cpp
Learning/ImportingintoPython/: ImportingafunctionfromC.py  functionforpython.c
Learning/LearningtoCompileinC/: CompileCommand.txt
Learning/PassingAnArrayIntoC/: New Text Document.txt  PassinganarrayIntoC.py  TestArrayFunction.c
Learning/PlayAGame/: play_game.c  random_numgen.c
Learning/PlayerMovement/: PlayerMove.py  player_movement.c
Learning/QuantumTableIndex/: Quantumtableindex.py  indexfinder.c  notes.txt  test_quantum_table_index.c
Learning/Win Checker/: win_checker.c  wincheck.py
LearningtoCompileinC/: CompileCommand.txt  help.py
Neat/Rendezvous_neat/: Neat.cpp  Neat.cpp.save-failed  Rendezvous_neat.cbp  Rendezvous_neat.depend  Rendezvous_neat.layout  generation_results.txt
PlayerMovement/: PassingAnarrayIntoC.py  PlayerMove.py  player_movement.c
PracticeCmakeandvcpkg/: CMakePresets.json  CMakeUserPresets.json
RendzvousInC++/: 1stRun.txt  RendzvousInC++.cbp  RendzvousInC++.depend  RendzvousInC++.layout  output.txt  quantumcircuit.cpp  test.cpp
RendzvousInC++/data/: Plotter.py  PlottingNotebook.ipynb
RendzvousInC++/doxygen/: doxyfile
UsingAGeneticAlgorithm/: UsingAGeneticAlgorithm.cbp  UsingAGeneticAlgorithm.depend  UsingAGeneticAlgorithm.layout  main.cpp  results.txt
rendezvous/: SeeingTheSpeedDecrease.py  ideal.cpp  ideal.cpp.save-failed  rendezvous.c
rendezvous/cppslowtranslation/: rendezvous_redo.cpp
(+66 files in other folders)
